# bankalm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: data_sources.yaml  deposit_competition.yaml  fdic_financials_core_fields.txt  ffiec_repricing_map.yaml  field_definitions.yaml  index_weights.yaml  peer_groups.yaml  public_bank_tickers_example.csv  sec_overrides.yaml  stickiness_scenarios.yaml
scripts/: build_alm_mismatch_features.py  build_bank_panel.py  build_deposit_competition_features.py  build_deposit_stickiness_features.py  build_indices.py  build_nic_structure.py  build_sec_mapping.py  build_supervised_stickiness.py  build_treasury_extensions.py  discover_ffiec_maturity_concepts.py  download_fdic_bankfind.py  download_ffiec_call_reports.py  download_fred_series.py  download_fry15_snapshots.py  download_nic_holding_company_financials.py  download_nic_structure.py  download_sec_edgar.py  download_treasury_yields.py  export_fdic_field_dictionary.py  extract_derivatives.py  extract_ffiec_repricing.py  generate_reports.py  parse_sec_filings.py  pipeline_status.py  run_failure_backtest.py  run_validation_2023.py
site/: bank.html  index.html  league.html
tests/: test_alm_mismatch.py  test_bank_panel.py  test_consistency.py  test_deposit_competition.py  test_deposit_stickiness.py  test_derivative_overlay.py  test_failure_backtest.py  test_fdic_bankfind.py  test_ffiec_repricing.py  test_fred_series.py  test_indices.py  test_indices_deposit_competition.py  test_nic_structure.py  test_pipeline_status.py  test_public_claims.py  (+9 more)
(+5272 files in other folders)
